fix spacing b/w image and text

--- a/src/output.css
+++ b/src/output.css
@@ -707,6 +707,18 @@ video {
   padding-top: 1rem;
 }
 
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-1 {
+  padding-top: 0.25rem;
+}
+
+.pt-1\.5 {
+  padding-top: 0.375rem;
+}
+
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
